Add trackee API
